tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/basic-multiline-unknown-escape.stderr
TOML parse error at line 1, column 10
  |
1 | a = """\@"""
  |          ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
